--- a/主界面/css/background.css
+++ b/主界面/css/background.css
@@ -11,10 +11,10 @@ html,body{
     width: 100%;
     height: 100%;
 }
-.container #mainmap{
+.container #mainmap {
     width: 100%;
     height: 100%;
-    position: relative;
+    position: absolute;
     overflow: hidden;
 }
 img{
