--- a/江苏/样例.css
+++ b/江苏/样例.css
@@ -112,14 +112,14 @@ header {
 }  
   
 .content {  
-    padding: 20px;  
+    padding: 10%;  
 }  
   
 footer {  
     background-color: rgba(255, 255, 255, 0.8);  
     color: #000000;  
     text-align: center;  
-    padding: 10px 0;  
+    padding: 1px 0;  
     position: fixed;  
     bottom: 0;  
     width: 100%;  
@@ -156,7 +156,7 @@ footer {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;  
     border-radius: 10px;  
-    text-align: left;  
+    text-align: justify;  
 }  
   
 .title {  
@@ -169,41 +169,32 @@ footer {
 }  
   
 .container {  
-    width: 120%; 
-    max-width: 1100px;
+    width: 100%; 
+    max-width: 120%;
 	background-color: rgba(255, 255, 255, 0.8);
 }  
   
 .box {  
     display: flex; 
     align-items: flex-start; 
-    gap: 10px; 
+    gap: 1px; 
 }  
   
 .box-image {  
-    max-width: 300px; /* 设置图片的最大宽度 */  
+    max-width: 50%; /* 设置图片的最大宽度 */  
     height: auto;  
     flex-shrink: 0; /* 防止图片在内容过多时变小 */  
 }  
   
 .box-content {  
     flex: 1; /* 让内容区域占据剩余空间 */  
-    padding: 20px; /* 内容区域的内边距 */  
+    padding: 10px; /* 内容区域的内边距 */  
 }  
-  
-.title {  
-    color: #333; /* 标题颜色 */  
-    margin-bottom: 10px;  
-}  
-  
-.content {  
-    color: #666; /* 内容颜色 */  
-}
 
 .gallery {  
         display: grid;  
         grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));  
-        grid-gap: 20px;  
+        grid-gap: 2%;  
         justify-content: center;  
     }  
   
@@ -214,7 +205,7 @@ footer {
   
     .gallery-item img {  
         width: 100%;  
-        height: auto;  
+        height: 100%;  
     }  
   
     .caption {  
@@ -233,22 +224,6 @@ footer {
   
     .gallery-item:hover .caption {  
         opacity: 1;  
-    }  
-	
-    .image-container {  
-        display: flex;  
-        justify-content: center; 
-        align-items: center; 
-        text-align: center; 
-        max-width: 100%; 
-        padding: 20px;   
-        box-sizing: border-box; 
-        border: 1px solid #ccc;
-    }  
-  
-    .image-container img {  
-        max-width: 100%;
-        height: auto; 
     }  
 	
 	.image-container a {  
